--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "dev": "nodemon index.js",
     "down": "npx sequelize-cli db:migrate:undo",
     "migrate": "npx sequelize-cli db:migrate",
-    "make-seed": "npx sequelize-cli seed:generate --name default-book",
+    "make-seed": "npx sequelize-cli seed:generate --name init",
     "seed": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nodejs", "sequelize", "postgres", "rest", "api"],
+  "keywords": [
+    "nodejs",
+    "sequelize",
+    "postgres",
+    "rest",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
