--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "nativolink",
-    "password": null,
+    "username": "postgres",
+    "password": 123456,
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "nativolink",
-    "password": null,
+    "username": "postgres",
+    "password": 123456,
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "nativolink",
-    "password": null,
+    "username": "postgres",
+    "password": 123456,
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
