--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,23 @@
     "password": 123456,
     "database": "database_development",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port":5433
   },
   "test": {
     "username": "postgres",
     "password": 123456,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port":5433
   },
   "production": {
     "username": "postgres",
     "password": 123456,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "port":5433
   }
 }
